fix: proper field get

--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
     "classnames": "^2.3.1",
-    "datocms-plugin-sdk": "^0.5.2",
-    "datocms-react-ui": "^0.5.2",
+    "lodash-es": "^4.17.21",
+    "datocms-plugin-sdk": "^0.6.10",
+    "datocms-react-ui": "^0.6.10",
     "final-form": "^4.20.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@types/lodash-es": "^4.17.5",
     "@typescript-eslint/parser": "^5.30.6",
     "cross-env": "^7.0.3",
     "eslint": "^8.19.0",
